--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -1,4 +1,4 @@
-// Profile component styling
+
 .container {
   max-width: 1000px;
 }
@@ -78,7 +78,7 @@
   padding: 0.4rem 0.8rem;
 }
 
-// Password toggle button
+
 .password-input-wrapper {
   position: relative;
   
@@ -112,7 +112,7 @@
   }
   
   .form-control {
-    padding-right: 2.75rem; // Make room for the toggle button
+    padding-right: 2.75rem; 
   }
 }
 
