--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -41,7 +41,7 @@
   }
 }
 
-// Left Section - Welcome
+
 .welcome-section {
   color: white;
   padding: 1.5rem;
@@ -115,7 +115,7 @@
   }
 }
 
-// Right Section - Form
+
 .form-section {
   padding: 1.5rem;
 }
@@ -283,13 +283,13 @@
   }
 }
 
-// Required asterisk
+
 .required-asterisk {
   color: #ef4444;
   margin-left: 0.25rem;
 }
 
-// Animations
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -312,7 +312,7 @@
   }
 }
 
-// Responsive Design
+
 @media (max-width: 992px) {
   .login-content {
     grid-template-columns: 1fr;
@@ -369,7 +369,6 @@
   margin-left: 2px;
 }
 
-// Password toggle button
 .password-input-wrapper {
   position: relative;
   
@@ -402,7 +401,7 @@
   }
   
   .form-control {
-    padding-right: 2.75rem; // Make room for the toggle button
+    padding-right: 2.75rem; 
   }
 }
 
